# weather-markov

./: pyproject.toml
.github/workflows/: black.yml
data/processed/: decades.csv
notebooks/: 01_preprocessing.ipynb  02_model_two_layer_graph.ipynb  03_model_full_graph.ipynb  04_model_nonuniform_Markov_chain.ipynb  04_model_nonuniform_markov_chain.ipynb  _notebook_init.py
weather_markov/: config.py
weather_markov/markov/: chain.py  graph.py  layered_graph.py
weather_markov/models/: base.py  decade_base.py  full_graph.py  nonuniform_Markov_chain.py  two_layer_graph.py
weather_markov/preprocessing/: aggregator.py  discretizer.py
weather_markov/visualization/: plots.py
