[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "weather_markov"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas", "numpy", "matplotlib",
    "seaborn", "networkx", "requests",
    "beautifulsoup4", "pyyaml", "scikit-learn"
]

[project.optional-dependencies]
dev = ["jupyter", "ipykernel", "pytest"]
